--- a/assets/package.json
+++ b/assets/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "assets",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "tests"
-  },
-  "dependencies": {
-    "inquirer": "^8.2.0",
-    "requirer": "0.0.4"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "assets",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "directories": {
+        "lib": "lib",
+        "test": "tests"
+    },
+    "dependencies": {
+        "inquirer": "^8.2.0",
+        "jest": "^27.3.1",
+        "requirer": "0.0.4"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
